@@ -5,7 +5,7 @@
 
 description	"Reboot after filesystems are changed"
 
-start on stopped mountall EXIT_STATUS=4
+start on stopped mountall EXIT_STATUS=5
 
 task
 exec reboot -f
