@@ -5,7 +5,7 @@
 
 description	"Recovery shell for filesystem failure"
 
-start on stopped mountall EXIT_STATUS=[!4]
+start on stopped mountall EXIT_STATUS=[!5]
 stop on runlevel [06]
 
 task
@@ -22,17 +22,32 @@ script
     3)
 	echo "Mount of filesystem failed."
 	;;
+    4)
+	echo "Mount of root filesystem failed."
+	;;
     *)
 	echo "Unknown error checking or mounting filesystems."
 	;;
     esac
 
     echo "A maintenance shell will now be started."
-    echo "CONTROL-D will terminate this shell and re-try."
+    if [ "$EXIT_STATUS" = "4" ]
+    then
+	echo "CONTROL-D will terminate this shell and reboot the system."
+    else
+	echo "CONTROL-D will terminate this shell and re-try."
+    fi
 
     /sbin/sulogin
 end script
 
 post-stop script
-    [ -n "$UPSTART_STOP_EVENTS" ] && exec start --no-wait mountall
+    if [ "$EXIT_STATUS" = "4" ]
+    then
+	umount -a || :
+	exec reboot -f
+    elif [ -n "$UPSTART_STOP_EVENTS" ]
+    then
+	exec start --no-wait mountall
+    fi
 end script
